Configuranto NPM, Vite, Vue e PWA para uso no nginx

--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -1,25 +1,26 @@
 server {
     listen 80;
-    index index.php index.html;
     server_name localhost;
     root /var/www/html/public;
+    index index.php index.html;
 
-    # Configuração para requisições normais
+    # Rota principal (Laravel)
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Configuração para arquivos PHP
+    # PHP-FPM
     location ~ \.php$ {
-        include snippets/fastcgi-php.conf; # Inclui parâmetros padrão do FastCGI
-        fastcgi_pass php:9000; # Certifique-se de que "php" corresponde ao nome do serviço no docker-compose
+        include /etc/nginx/snippets/fastcgi-php.conf;
+        fastcgi_pass php:9000;
+
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+
         include fastcgi_params;
     }
 
-    # Proteger arquivos .ht*
+    # Bloquear arquivos .ht*
     location ~ /\.ht {
         deny all;
     }
