--- a/package.json
+++ b/package.json
@@ -3,17 +3,28 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "test": "vitest",
+        "test:run": "vitest run",
+        "test:coverage": "vitest run --coverage"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/vue": "^8.1.0",
         "@vitejs/plugin-vue": "^6.0.1",
+        "@vitest/coverage-v8": "^4.0.6",
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
+        "axios": "^1.13.1",
         "concurrently": "^9.0.1",
+        "jsdom": "^27.1.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0",
-        "vite-plugin-pwa": "^1.1.0"
+        "vite-plugin-pwa": "^1.1.0",
+        "vitest": "^4.0.6"
+    },
+    "dependencies": {
+        "vue-router": "^4.6.3"
     }
 }
